# tile57-opencpn-plugin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  security.yml
cmake/: Package.cmake  fix-macos-libs.sh  metadata.xml.in
docs/: .gitignore  docusaurus.config.js  package.json  sidebars.js
docs/docs/: architecture.md  building.md  getting-started.md  intro.md  limitations.md  rendering.md  settings.md
docs/src/css/: custom.css
scripts/: bake_enc_root.sh  link_enc_root.sh
scripts/defect-hunt/: .gitignore  chart_info.c  hunt.py
src/: bake_manager.cpp  bake_manager.h  build_charts.cpp  build_charts.h  chart_renderer.cpp  chart_renderer.h  gl.h  safety_overlay.cpp  safety_overlay.h  tile57_chart.cpp  tile57_chart.h  tile57_pi.cpp
